log
Fri, Apr 18, 2025  3:20:49 PM: 
 tests:  0|6
total_score: 0/70
eeef3b7
Fri, Apr 18, 2025  3:33:08 PM: 
 hashmap.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'createMap':
hashmap.c:62:12: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
     return Mapa;
            ^~~~
hashmap.c:62:12: error: function returns address of local variable [-Werror=return-local-addr]
cc1.exe: all warnings being treated as errors
e34855c
Fri, Apr 18, 2025  4:33:43 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
ce8e13c
Fri, Apr 18, 2025  4:38:56 PM: 
 hashmap.c | 22 ++++++++++++++++------
 1 file changed, 16 insertions(+), 6 deletions(-)
 tests:  1|5
total_score: 10/70
d6eb64e
Fri, Apr 18, 2025  4:50:55 PM: 
 hashmap.c | 16 +++++++++++++++-
 1 file changed, 15 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'insertMap':
hashmap.c:49:31: error: comparison between pointer and integer [-Werror]
         for(int i = Indice; i != NULL; i++)
                               ^~
cc1.exe: all warnings being treated as errors
42ddd9f
Fri, Apr 18, 2025  4:51:19 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
ffe9ba1
Fri, Apr 18, 2025  4:52:38 PM: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
156a1ee
Fri, Apr 18, 2025  4:57:25 PM: 
 hashmap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  0|0
59580f1
Fri, Apr 18, 2025  5:00:53 PM: 
 hashmap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
32a1b39
Fri, Apr 18, 2025  5:01:22 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
c67748f
Fri, Apr 18, 2025  5:07:48 PM: 
 hashmap.c | 17 +++++++++++++++--
 1 file changed, 15 insertions(+), 2 deletions(-)
 tests:  0|0
b8f009a
Fri, Apr 18, 2025  5:08:23 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
94b551a
Fri, Apr 18, 2025  5:09:01 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
c858309
Fri, Apr 18, 2025  5:11:33 PM: 
 hashmap.c | 23 ++++++++++++-----------
 1 file changed, 12 insertions(+), 11 deletions(-)
 tests:  8|3
total_score: 40/70
7d5835c
Fri, Apr 18, 2025  5:24:51 PM: 
 hashmap.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
 tests:  11|2
total_score: 50/70
5caa9ea
Fri, Apr 18, 2025  5:31:32 PM: 
 hashmap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  0|0
411fa87
